Cartagena de indias

--- a/src/pages/cartagena-de-indias.astro
+++ b/src/pages/cartagena-de-indias.astro
@@ -6,4 +6,225 @@ import Layout from "../layouts/Layout.astro"
 <Layout>
     <Navbar />
     <BreadcrumbCCartagenadeIndias />
+    <section class="pt-12 pb-20 px-6 bg-white min-h-screen">
+        <div class="max-w-4xl mx-auto">
+            <div class="space-y-10 text-gray-700 text-lg">
+                <!-- Día 1 -->
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">
+                        DIA 1: LIMA-CARTAGENA DE INDIAS/PASEO EN CHIVAS
+                    </h2>
+                    <ul class="space-y-3 text-gray-800 list-disc list-inside">
+                        <li><strong>07:00 hrs:</strong> Recepción en Lima. Traslado al aeropuerto en trasporte exclusivo de MOVIL BUS.</li>
+                        <li><strong>08:00 hrs:</strong> Llegada al aeropuerto. Atención personalizada LATAM GRUPOS - EQUIPAJE: maleta de carry on de 12kg para bodega más una mochila de 10kg para cabina</li>
+                        <li><strong>12:00 hrs:</strong> Salida con destino a Cartagena vía LATAM 2448</li>
+                        <li><strong>16:05 hrs:</strong> Llegada a la ciudad de Cartagena. Traslado al HOTEL CARTAGENA PLAZA Instalación en el hotel en habitaciones dobles. INGRESO A LA ESTACIÓN SNACK Actividades en grupo en la piscina del hotel.</li>
+                        <li><strong>19:00 hrs:</strong> CENA BUFFET</li>
+                        <li><strong>20:00 hrs:</strong>PASEO EN CHIVAS (SERVICIO PRIVADO) Recorreremos en transporte típico de Colombia por la vieja ciudad de Cartagena y las zonas residenciales Boca grande. Disfrutaremos de un espectacular paseo con música y animación abordo. Retorno al hotel. Pernocte.</li>
+                    </ul>
+                </div>
+
+                <!-- Día 2 -->
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">
+                        DIA 02: CITY TOUR - CARTAGENA DE INDIAS
+                    </h2>
+                    <ul class="space-y-3 text-gray-800 list-disc list-inside">
+                        <li><strong>08:00 hrs:</strong> Desayuno buffet.</li>
+                        <li><strong>09:00 hrs:</strong> Durante el circuito se pasará por el área moderna de Boca grande y el barrio de Manga, donde se ven casonas antiguas de inicios del siglo XX. Recorremos peatonalmente la ciudad amuralla,hechapara protegerse de los ataques de los galeones y barcos ingleses y franceses en el siglo XVII. Conoceremos la torre del reloj, la plaza de la aduana. Iglesia y plaza santo Domingo,iglesia y plaza de san Pedro, el palacio de la Inquisición. Finalmente conoceremos el Castillo de San Felipe de Barajas, obra monumental construido en honor al rey de España en la colonia. Retorno al hotel ALMUERZO BUFFET EN EL HOTEL.</li>
+                        <li><strong>15:00 hrs:</strong> Actividades recreativas en grupo a cargo el staff de actividades del hotel.</li>
+                        <li><strong>20:00 hrs:</strong> CENA BUFFET SHOW NOCTURNO Pernocte</li>
+                    </ul>
+                </div>
+
+                <!-- Día 3 -->
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">
+                        DIA 03: PLAYA BLANCA BARU / FIESTA DE BLANCO
+                    </h2>
+                    <ul class="space-y-3 text-gray-800 list-disc list-inside">
+                        <li><strong>09:00 hrs:</strong> DESAYUNO BUFFET. Traslado en bus a Playa blanca Barú, es un paraíso donde el intenso azul y verde del mar y sus arenas nos hacen soñar. Tendremos la oportunidad de practicar deportes acuáticos: MOTOACUATICA, BANANAS INFLABABLES, etc. ALMUERZO MARINO EN BARU Retorno al hotel CARTAGENA PLAZA</li>
+                        <li><strong>19:00 hrs:</strong> CENA BUFFET</li>
+                        <li><strong>20:00 hrs:</strong> FIESTA DE BLANCO para el grupo en la discote ca del hotel.</li>
+                    </ul>
+                </div>
+
+                <!-- Día 4 -->
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">
+                        DIA 04: ISLAS DEL ROSARIO/ ISLA SAN MARTIN - OCEANARIO
+                    </h2>
+                    <ul class="space-y-3 text-gray-800 list-disc list-inside">
+                        <li><strong>08:00 hrs:</strong> Desayuno buffet.</li>
+                        <li><strong>09:00 hrs:</strong> Iniciaremos el tour que incluye transporte en lancha rápida con destino a las Islas del rosario, al sur de la Bahía de Cartagena. Estas islas son consideradas un Parque Natural Nacional, una maravilla de la naturaleza el agua cristalina y las formaciones coralinas muestran un ecosistema único en el mundo. Podrá disfrutar de playas pequeñas y variedad de fauna del arrecife, ideal para descansar y nadar. OCEANARIO ISLAS DEL ROSARIO, visitaremos este centro de conservación y hogar de más de 1,400 animales de 140 especies marinas del Caribe colombiano, que ofrece experiencias inolvidables a sus visitantes y educación sobre la importancia y cuidado de la flora y fauna marina. También realiza trabajos valiosos protegiendo y repoblando especies amenazadas como corales, tortugas marinas, peces marinos, entre otros. OPCIONAL. SNORKELING, práctica acuática para lo cual proporcionaremos a cada participante las caretas además se cuenta con el apoyo de los guías para realizar el buceo. Retorno al hotel. ALMUERZO BUFFET.</li>
+                        <li><strong>20:00 hrs:</strong> CENA BUFFET SHOW NOCTURNO Pernocte</li>
+                    </ul>
+                </div>
+
+                <!-- Día 5 -->
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">
+                        DIA 05: CARTAGENA - COMPRAS/ FELIZ RETORNO
+                    </h2>
+                    <ul class="space-y-3 text-gray-800 list-disc list-inside">
+                        <li><strong>08:00 hrs:</strong> DESAYUNO BUFFET Trasladaremos al grupo a los centros artesanales ycentros comerciales para compras de souvenir.</li>
+                        <li><strong>13:00 hrs:</strong> ALMUERZO BUFFET DE DESPEDIDA.</li>
+                        <li><strong>15:00 hrs:</strong> Traslado de salida al aeropuerto.</li>
+                        <li><strong>17:20 hrs:</strong> Salida con destino a la ciudad de Lima LATAM LA 2449</li>
+                        <li><strong>17:00 hrs:</strong> Ingreso a la estación de snack</li>
+                        <li><strong>20:55 hrs:</strong> Llegada a la ciudad de Lima. Traslado de salida en trasporte exclusivo MOVIL BUS.</li>
+                    </ul>
+                </div>
+
+                <!-- Beneficios para el grupo -->
+                 <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">BENEFICIOS PARA EL GRUPO:</h2>
+                    <ul class="list-disc list-inside space-y-3 text-gray-800">
+                        <li>POR CADA 15 PAGANTES UN LIBERADO.</li>
+                        <li>TOUR CONDUCTOR ACOMPAÑARÁ AL GRUPO. BENEFICIO PARA GRUPOS DE MINIMO 20 PERSONAS PAGANTES.</li>
+                        <li>VIDEOS Y FOTOGRAFIAS GRUPALES del viaje en formato MP4 para cada participante. Beneficio para grupos de mínimo 20 personas pagantes.</li>
+                        <li>NOCHE DE BLANCO en la discoteca del hotel. Cuenta con animación.</li>
+                        <li><strong>AEROLÍNEAS:</strong> LATAM O AVIANCA</li>
+                        <li><strong>HOTEL:</strong> CARTAGENA PLAZA****</li>
+                        <li class="italic">RESERVA CONFIRMADA 2025</li>
+                    </ul>
+                </div>
+
+                <!-- Programa Incluye -->
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">EL PROGRAMA INCLUYE</h2>
+                    <ul class="list-disc list-inside space-y-3 text-gray-800">
+                        <li>BOLETO AÉREO LIMA / CARTAGENA / LIMA LATAM</li>
+                        <li>TRASLADO COLEGIO / AEROPUERTO / COLEGIO MOVIL BUS</li>
+                        <li>TRASLADO APTO CARTAGENA / HOTEL / APTO CARTAGENA</li>
+                        <li>TARJETA DE ASISTENCIA SOS24, SIN DEDUDIBLE.</li>
+                    </ul>
+                </div>
+
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">HOTEL CARTAGENA PLAZA*** SISTEMA ALL INCLUSIVE</h2>
+                    <ul class="list-disc list-inside space-y-3 text-gray-800">
+                        <li>04 NOCHES DE ALOJAMIENTO EN HOTEL CARATEGENA PLAZA****</li>
+                        <li>HABITACIONES DOBLES STANDAR</li>
+                        <li>04 DESAYUNOS BUFFET</li>
+                        <li>04 ALMUERZOS BUFFET INTERNACIONAL+01 ALMUERZO MARINO</li>
+                        <li>04 CENAS BUFFET</li>
+                        <li>Snack entre comidas</li>
+                        <li>Show nocturno todos los días</li>
+                        <li>PROGRAMA DIARIO DE ACTIVIDADES para el grupo: Bailes, juegos, aeróbicos, vóley playa, futbol playa.</li>
+                        <li>Piscina de agua dulce en el hotel.</li>
+                        <li>NOCHE DE BLANCO PARA EL GRUPO</li>
+                    </ul>
+                </div>
+
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">TOURS DESCRITOS EN EL PROGRAMA:</h2>
+                    <ul class="list-disc list-inside space-y-3 text-gray-800">
+                        <li>PASEO EN CHIVAS POR LA CIUDAD</li>
+                        <li>CITY TOUR HISTÓRICO Y MODERNO.</li>
+                        <li>TOUR ISLAS DEL ROSARIO</li>
+                        <li>VISITA AL OCEANARIO ISLAS DEL ROSARIO/SNORKELING</li>
+                        <li>TOUR PLAYA BLANCA BARU/ TOUR DE COMPRAS</li>
+                    </ul>
+                </div>
+
+                <!-- Condiciones Generales -->
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">CONDICIONES GENERALES</h2>
+                    <ul class="list-disc list-inside space-y-3 text-gray-800">
+                        <li>Cada padre de familia firmará un compromiso de viaje consignando los datos del participante y persona responsable de los pagos. FECHA LIMITE INSCRIPCION 28FEB</li>
+                        <li>Se enviará una carta a cada padre informando la cuenta de la empresa, detallando elprocedimiento para el pago y ejecutivo a cargo de la cuenta.</li>
+                        <li>Toda anulación de la reserva hasta 90 días antes del vuelo tendrá una penalidad de USD 200.</li>
+                        <li>PREPAGO USD 200 NO REEMBOLSABLE, NO TRANSFERIBLE.</li>
+                        <li>Cotización grupal con LATAM, incluye maleta 12kg. CARRY ON para bodega y mochila de 10kg para cabina.</li>
+                        <li>Aceptamos tarjetas VISA, MASTERCARD. Comisión 5%</li>
+                    </ul>
+                </div>
+
+                <!-- Descripción del Hotel -->
+                <div class="bg-gray-50 rounded-xl p-6 shadow-sm mt-12">
+                    <h2 class="text-2xl font-bold text-blue-800 border-b border-red-400 pb-2 mb-4">
+                        HOTEL CATEGORIA 04 ESTRELLAS
+                    </h2>
+                    <div class="space-y-4 text-gray-800 text-base">
+                        <p>
+                            Disfrute de las habitaciones estándar más amplias y confortables de la ciudad de Cartagena. Totalmente renovadas, con hermosa vista al mar, a la ciudad antigua o a nuestra bahía considerada como una de las más bellas del mundo. La excelente infraestructura hotelera unida a la calidez y profesionalismo de nuestros colaboradores. 
+                        </p>
+                        <p>
+                            <ul>
+                                <strong>RESTAURANTE BUFFET LE PLACE</strong>
+                                <li>
+                                    La mejor comida nacional e internacional.
+                                </li>
+                                <li>
+                                    Espacioso y moderno ambiente.
+                                </li>
+                                <li>
+                                    Capacidad para 284 comensales Especial para deliciosos desayunos, almuerzos buffet y el disfrute en la cena de nuestros buffets temáticos
+                                </li>
+                                <li>
+                                    COCINA EN VIVO
+                                </li>
+                                <li>
+                                    ESTACIÓN DE JUGOS EN VIVO
+                                </li>
+                                <li>
+                                    REFRESCANTES RASPA’OS EN LA PISCINA
+                                </li>
+                                <li>
+                                    FRUTAS FRESCAS A LA HORA DEL SNACK
+                                </li>
+                            </ul>
+                        </p>
+                        <p>
+                            <ul>
+                                <strong>DIVERSIÓN Y ENTRETENIMIENTO</strong>
+                                <li>
+                                    <strong>PISCINA PANORÁMICA</strong>
+                                </li>
+                                <li>
+                                    Ubicada en el Piso 18.
+                                </li>
+                                <li>
+                                    Disf rute de cómodas asoleaderas.
+                                </li>
+                            </ul>
+                        </p>
+                        <p>
+                            <ul>
+                                <strong>ZONA DE PLAYA FRENTE AL HOTEL</strong>
+                                <li>
+                                    Disfrute de parasoles, toallas y sillas sin costo adicional en la zona de playa frente al hotel.
+                                </li>
+                                <li>
+                                    RECREACIÓN DIRIGIDA PARA ADULTOS Y NIÑOS
+                                </li>
+                            </ul>
+                        </p>
+                        <p>
+                            <ul>
+                                <strong>EXPERIENCIAS DIVERTIDAS</strong>
+                                <li>
+                                    Shows de entretenimiento en restaurante buffet le place
+                                </li>
+                                <li>
+                                    FIESTA PARA EL GRUPO EN LA DISCOTECA DEL HOTEL.
+                                </li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Botones -->
+            <div class="flex flex-col sm:flex-row gap-4 mt-12 justify-center">
+                <a href="/" class="text-blue-800 px-6 py-3 rounded-lg border border-blue-800 text-base font-medium hover:bg-blue-800 hover:text-white transition">
+                    <i class="fas fa-arrow-left mr-2"></i> Volver
+                </a>
+                <a href="https://wa.link/aaitsz" class="bg-blue-800 text-white px-6 py-3 rounded-lg text-base font-medium hover:bg-blue-900 transition" target="_blank">
+                    <i class="fa-brands fa-whatsapp mr-2"></i> Consultar ahora
+                </a>
+            </div>
+        </div>
+    </section>
 </Layout>
